# EdgeFlow

./: .clang-format  .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/app/edgeflow/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/: ThreadSafeQueue.hpp
include/edgeflow/: ComputationEngine.h  DataTypes.h  EdgeFlow.h  NetworkEventHandler.h  Orchestrator.h
src/: ComputationEngine.cpp  EdgeFlow.cpp  NetworkEventHandler.cpp  Orchestrator.cpp
